libs/ctp/mac64/wrapper/ctp_wrapper.h

// C wrapper for CTP MD API
void *CThostFtdcMdApi_CreateFtdcMdApi(const char *pszFlowPath, int bIsUsingUdp,
                                      int bIsMulticast, int bIsProductionMode);
void CThostFtdcMdApi_Release(void *api);
void CThostFtdcMdApi_Init(void *api);
int CThostFtdcMdApi_Join(void *api);
const char *CThostFtdcMdApi_GetTradingDay(void *api);
void CThostFtdcMdApi_RegisterFront(void *api, const char *pszFrontAddress);
void CThostFtdcMdApi_RegisterNameServer(void *api, const char *pszNsAddress);
void CThostFtdcMdApi_RegisterFensUserInfo(void *api, void *pFensUserInfo);
void CThostFtdcMdApi_RegisterSpi(void *api, void *pSpi);
int CThostFtdcMdApi_ReqUserLogin(void *api, void *pReqUserLoginField,
                                 int nRequestID);
int CThostFtdcMdApi_ReqUserLogout(void *api, void *pUserLogout, int nRequestID);
int CThostFtdcMdApi_SubscribeMarketData(void *api, char *ppInstrumentID[],
                                        int nCount);
int CThostFtdcMdApi_UnSubscribeMarketData(void *api, char *ppInstrumentID[],
                                          int nCount);
int CThostFtdcMdApi_SubscribeForQuoteRsp(void *api, char *ppInstrumentID[],
                                         int nCount);
int CThostFtdcMdApi_UnSubscribeForQuoteRsp(void *api, char *ppInstrumentID[],
                                           int nCount);
const char *CThostFtdcMdApi_GetApiVersion();
// C wrapper for CTP Trader API
void *CThostFtdcTraderApi_CreateFtdcTraderApi(const char *pszFlowPath,
                                              int bIsProductionMode);
void CThostFtdcTraderApi_Release(void *api);
const char *CThostFtdcTraderApi_GetApiVersion();
// Debug logging functions
void CTP_InitializeDebugLogging(const CtpLogConfig* config);
void CTP_CleanupDebugLogging();