src/ffi.rs

//! FFI绑定模块
//!
//! 直接与CTP C++库的底层接口绑定

use std::os::raw::{c_char, c_int, c_void};

// Debug日志配置结构体
#[repr(C)]
pub struct CtpLogConfig {
    pub enable_debug: c_int,           // 0=关闭, 1=开启
    pub log_file_path: *const c_char,  // 日志文件路径，NULL=控制台输出
    pub max_file_size_mb: c_int,       // 最大文件大小（MB）- 预留功能
    pub max_backup_files: c_int,       // 最大备份文件数 - 预留功能
}

// SPI回调结构体
#[repr(C)]
pub struct MdSpiCallbacks {
    pub user_data: *mut c_void,
    pub on_front_connected: Option<extern "C" fn(*mut c_void)>,
    pub on_front_disconnected: Option<extern "C" fn(*mut c_void, c_int)>,
    pub on_heart_beat_warning: Option<extern "C" fn(*mut c_void, c_int)>,
    pub on_rsp_user_login:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_user_logout:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_error: Option<extern "C" fn(*mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_sub_market_data:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_unsub_market_data:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rtn_depth_market_data: Option<extern "C" fn(*mut c_void, *mut c_void)>,
    pub on_rtn_for_quote_rsp: Option<extern "C" fn(*mut c_void, *mut c_void)>,
}

// 交易SPI回调结构体
#[repr(C)]
pub struct TraderSpiCallbacks {
    pub user_data: *mut c_void,
    pub on_front_connected: Option<extern "C" fn(*mut c_void)>,
    pub on_front_disconnected: Option<extern "C" fn(*mut c_void, c_int)>,
    pub on_heart_beat_warning: Option<extern "C" fn(*mut c_void, c_int)>,
    pub on_rsp_authenticate:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_user_login:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_user_logout:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_error: Option<extern "C" fn(*mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_order_insert:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_order_action:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rtn_order: Option<extern "C" fn(*mut c_void, *mut c_void)>,
    pub on_rtn_trade: Option<extern "C" fn(*mut c_void, *mut c_void)>,
    pub on_rsp_qry_trading_account:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_investor_position:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,

    // 第一阶段新增回调
    pub on_err_rtn_order_insert: Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void)>,
    pub on_err_rtn_order_action: Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void)>,
    pub on_rsp_qry_order:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_trade:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_instrument:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,

    // 第二阶段新增回调
    pub on_rsp_qry_instrument_margin_rate:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_instrument_commission_rate:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_exchange:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_product:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_settlement_info_confirm:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_parked_order_insert:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_parked_order_action:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,

    // 第三阶段新增回调
    pub on_rsp_exec_order_insert:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_exec_order_action:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_for_quote_insert:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_quote_insert:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_quote_action:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_batch_order_action:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_remove_parked_order:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_remove_parked_order_action:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_max_order_volume:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_depth_market_data:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_settlement_info:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_transfer_bank:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_investor_position_detail:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
    pub on_rsp_qry_notice:
        Option<extern "C" fn(*mut c_void, *mut c_void, *mut c_void, c_int, c_int)>,
}

// SPI桥接函数
#[link(name = "ctp_wrapper")]
extern "C" {
    pub fn CreateMdSpiBridge(callbacks: *const MdSpiCallbacks) -> *mut c_void;
    pub fn DestroyMdSpiBridge(spi_bridge: *mut c_void);
    pub fn CreateTraderSpiBridge(callbacks: *const TraderSpiCallbacks) -> *mut c_void;
    pub fn DestroyTraderSpiBridge(spi_bridge: *mut c_void);
    
    // Debug日志接口
    pub fn CTP_InitializeDebugLogging(config: *const CtpLogConfig);
    pub fn CTP_CleanupDebugLogging();
}

// CTP行情API的FFI声明
pub mod md_api {
    use super::*;

    // 创建行情API实例
    //
    // # 参数
    // * `flow_path` - 存储流文件的目录，默认为当前目录
    // * `is_using_udp` - 是否使用UDP协议接收多播数据
    // * `is_multicast` - 是否使用组播方式
    //
    // # 返回值
    // 行情API实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_CreateFtdcMdApi(
            flow_path: *const c_char,
            is_using_udp: bool,
            is_multicast: bool,
            is_production_mode: bool,
        ) -> *mut c_void;
    }

    // 获取API版本号
    //
    // # 返回值
    // 版本号字符串
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_GetApiVersion() -> *const c_char;
    }

    // 释放API实例
    //
    // # 参数
    // * `api` - API实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_Release(api: *mut c_void);
    }

    // 初始化API
    //
    // # 参数
    // * `api` - API实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_Init(api: *mut c_void);
    }

    // 等待API线程结束运行
    //
    // # 参数
    // * `api` - API实例指针
    //
    // # 返回值
    // 线程退出代码
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_Join(api: *mut c_void) -> c_int;
    }

    // 获取当前交易日
    //
    // # 参数
    // * `api` - API实例指针
    //
    // # 返回值
    // 交易日字符串(YYYYMMDD格式)
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_GetTradingDay(api: *mut c_void) -> *const c_char;
    }

    // 注册前置机网络地址
    //
    // # 参数
    // * `api` - API实例指针
    // * `front_address` - 前置机网络地址，格式为："protocol://ipaddress:port"，
    //                     如："tcp://127.0.0.1:17001"
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_RegisterFront(api: *mut c_void, front_address: *const c_char);
    }

    // 注册名字服务器网络地址
    //
    // # 参数
    // * `api` - API实例指针
    // * `ns_address` - 名字服务器网络地址，格式同前置机地址
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_RegisterNameServer(api: *mut c_void, ns_address: *const c_char);
    }

    // 注册名字服务器用户信息
    //
    // # 参数
    // * `api` - API实例指针
    // * `user_info` - 用户信息
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_RegisterFensUserInfo(api: *mut c_void, user_info: *const c_void);
    }

    // 注册回调接口
    //
    // # 参数
    // * `api` - API实例指针
    // * `spi` - 派生自CThostFtdcMdSpi的实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_RegisterSpi(api: *mut c_void, spi: *mut c_void);
    }

    // 用户登录请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 登录请求
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_ReqUserLogin(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 登出请求
    //
    // # 参数
    // * `api` - API实例指针
    // * `req` - 登出请求
    // * `request_id` - 请求ID
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_ReqUserLogout(
            api: *mut c_void,
            req: *const c_void,
            request_id: c_int,
        ) -> c_int;
    }

    // 订阅行情
    //
    // # 参数
    // * `api` - API实例指针
    // * `instrument_ids` - 合约ID数组
    // * `count` - 合约个数
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_SubscribeMarketData(
            api: *mut c_void,
            instrument_ids: *const *const c_char,
            count: c_int,
        ) -> c_int;
    }

    // 退订行情
    //
    // # 参数
    // * `api` - API实例指针
    // * `instrument_ids` - 合约ID数组
    // * `count` - 合约个数
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_UnSubscribeMarketData(
            api: *mut c_void,
            instrument_ids: *const *const c_char,
            count: c_int,
        ) -> c_int;
    }

    // 订阅询价
    //
    // # 参数
    // * `api` - API实例指针
    // * `instrument_ids` - 合约ID数组
    // * `count` - 合约个数
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_SubscribeForQuoteRsp(
            api: *mut c_void,
            instrument_ids: *const *const c_char,
            count: c_int,
        ) -> c_int;
    }

    // 退订询价
    //
    // # 参数
    // * `api` - API实例指针
    // * `instrument_ids` - 合约ID数组
    // * `count` - 合约个数
    //
    // # 返回值
    // 0表示成功，非0表示失败
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcMdApi_UnSubscribeForQuoteRsp(
            api: *mut c_void,
            instrument_ids: *const *const c_char,
            count: c_int,
        ) -> c_int;
    }
}

// CTP交易API的FFI声明
pub mod trader_api {
    use super::*;

    // 创建交易API实例
    //
    // # 参数
    // * `flow_path` - 存储流文件的目录，默认为当前目录
    //
    // # 返回值
    // 交易API实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_CreateFtdcTraderApi(
            flow_path: *const c_char,
            is_production_mode: bool,
        ) -> *mut c_void;
    }

    // 获取API版本号
    //
    // # 返回值
    // 版本号字符串
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_GetApiVersion() -> *const c_char;
    }

    // 释放API实例
    //
    // # 参数
    // * `api` - API实例指针
    #[link(name = "ctp_wrapper")]
    extern "C" {
        pub fn CThostFtdcTraderApi_Release(api: *mut c_void);
    }
